k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  namespace: acme-todo
  labels:
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      serviceAccountName: database-sa
      containers:
        - name: postgres
          image: postgres:18-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql
            - name: db-init-script-volume
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true
          readinessProbe:
            exec:
              command: ['pg_isready', '-U', 'postgres', '-d', 'todo']
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            exec:
              command: ['pg_isready', '-U', 'postgres', '-d', 'todo']
            initialDelaySeconds: 15
            periodSeconds: 10
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: db-pvc
        - name: db-init-script-volume
          configMap:
            name: db-init-script-configmap
